SF Primes/src/objects/CMF_Info__c.object
<CustomObject>
    <description>Core BU based identifier numbers</description>
    <fields>
        <fullName>ACT_Create_Date__c</fullName>
        <description>ACT Create Date</description>
        <label>ACT Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACT_Modified_Date__c</fullName>
        <description>ACT Modified Date</description>
        <label>ACT Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACT_Owner__c</fullName>
        <label>ACT Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AKA_Name__c</fullName>
        <label>AKA Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CMF Info</relationshipLabel>
        <relationshipName>R00N40000001leBEEAY</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bill_CMF_Status__c</fullName>
        <label>Bill CMF Status</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bill_CMF__c</fullName>
        <label>Bill CMF</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buy_Sell__c</fullName>
        <label>Buy/Sell</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CDK_Rebranding_Status__c</fullName>
        <label>CDK Rebranding Status</label>
        <picklist>
            <picklistValues>
                <fullName>Burned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMF_Replaced__c</fullName>
        <label>CMF Replaced</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_File_Location__c</fullName>
        <label>Client File Location</label>
        <picklist>
            <picklistValues>
                <fullName>Client File Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive Client File Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lookup User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Collector__c</fullName>
        <label>Collector</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combo_Font__c</fullName>
        <label>Combo Font</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conditional_A_R_Statement_Install_Date__c</fullName>
        <label>Conditional A/R Statement Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conditional_A_R_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conditional A/R Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creator__c</fullName>
        <label>Oracle Creator</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Access_Catalog_Notes__c</fullName>
        <label>Access Catalog Notes</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Access_Frequency__c</fullName>
        <label>Access Frequency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Access_POAttn__c</fullName>
        <label>Access POAttn</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Address_2__c</fullName>
        <label>Shipping Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Assigned_CSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned CSR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CMF_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Autoship_Status__c</fullName>
        <label>Autoship Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Billing_Model__c</fullName>
        <label>Billing Model</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Branding__c</fullName>
        <label>Branding</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Canada_Client__c</fullName>
        <label>Canada Client</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR CAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Custom_F_I_DCAP__c</fullName>
        <label>Custom F&amp;I DCAP</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Custom_P_S_DCAP__c</fullName>
        <label>Custom P&amp;S DCAP</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DS_FFC_DCAP_Sales_Notes__c</fullName>
        <label>DCAP Sales Notes</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DS_FFC_FRM_Ship_To_CMF_State__c</fullName>
        <formula>Account__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To CMF State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_FFC_F_I_DCAP_Notes__c</fullName>
        <label>F&amp;I DCAP Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DS_FFC_F_I_DCAP_Status__c</fullName>
        <label>F&amp;I DCAP Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Last_Order_Qty__c</fullName>
        <label>Last Order Qty</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Last_Review_Date__c</fullName>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Maximum_Shop_Supply_Cost__c</fullName>
        <label>Maximum Shop Supply Cost ($)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Number_of_DC_Lasers__c</fullName>
        <label>Number of DC Lasers</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Number_of_PSA_Lasers__c</fullName>
        <label>Number of PSA Lasers</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_FFC_POAttn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POAttn</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CMF Info</relationshipLabel>
        <relationshipName>CMF_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DS_FFC_P_S_DCAP_Status__c</fullName>
        <label>P&amp;S DCAP Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Paper_Special_Instructions__c</fullName>
        <label>Paper Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Renewal_Day__c</fullName>
        <label>Renewal (Day)</label>
        <picklist>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Renewal_Month__c</fullName>
        <label>Renewal (Month)</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Restocking_Charge__c</fullName>
        <label>Restocking Charge (%)</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Return_Expiration_Days__c</fullName>
        <label>Return Expiration (Days)</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Shipping_Address_1__c</fullName>
        <label>Shipping Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Shipping_Zip__c</fullName>
        <label>Shipping Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Shop_Supplies_Calculation__c</fullName>
        <label>Shop Supplies Calculation</label>
        <picklist>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts &amp; Labor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Shop_Supply_Costs__c</fullName>
        <label>Shop Supply Costs (%)</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_FFC_Storage_Charge__c</fullName>
        <label>Storage Charge ($)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Warehouse__c</fullName>
        <formula>hyperlink(&quot;http://dsiishe.hoffman.ds.adp.com/DwWeb/GUI/CustomerDetail.aspx?cmf=&quot; &amp; Ship_CMF__c, &quot;Data Warehouse&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Warehouse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFD_Branch__c</fullName>
        <label>EFD Branch</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFD_Installed__c</fullName>
        <label>EFD Installed</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Install_Date__c</fullName>
        <label>Estimated Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Font__c</fullName>
        <label>Font</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Status__c</fullName>
        <label>Group/Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_CAM_Email__c</fullName>
        <label>Key CAM Email</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_CAM__c</fullName>
        <label>Key CAM</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LS_1200__c</fullName>
        <label>LS 1200</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LS_1300__c</fullName>
        <label>LS 1300 #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LS_1800_2000_1500__c</fullName>
        <label>LS 1800/2000/1500</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LS_1900__c</fullName>
        <label>LS 1900</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LS_1920_with_flash__c</fullName>
        <label>LS 1920 (with flash)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LS_3000_1520__c</fullName>
        <label>LS 3000/1520</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LS_4000_Downloads__c</fullName>
        <label>LS 4000 Downloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LS_4000_w_Flash__c</fullName>
        <label>LS 4000 w/Flash</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LS_5000_w_Flash__c</fullName>
        <label>LS 5000 w/Flash</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Laser_Artwork_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LAS Users only</description>
        <inlineHelpText>You can only search for LAS users.</inlineHelpText>
        <label>Laser Artwork Specialist</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND 3</booleanFilter>
            <errorMessage>LAS Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>ADPDS - Laser</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>CDK - COE</value>
            </filterItems>
            <filterItems>
                <field>$User.Username</field>
                <operation>notContain</operation>
                <value>$User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CMF_Info_LAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logon_Prefix__c</fullName>
        <label>Logon Prefix</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_CMF_Business_Unit_Code__c</fullName>
        <label>Main CMF - Business Unit Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_CMF_Business_Unit__c</fullName>
        <label>Main CMF - Business Unit</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_CMF_Region_Code_Name__c</fullName>
        <label>Main CMF - Region Code Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_CMF_Region_Code__c</fullName>
        <label>Main CMF - Region Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_CMF_Status__c</fullName>
        <label>Main CMF Status</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_CMF__c</fullName>
        <label>Main CMF</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Multisite_Dealer__c</fullName>
        <label>Multisite Dealer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Network_Solution__c</fullName>
        <formula>hyperlink(&quot;http://www.networksolutions.ds.adp.com/VerifyGetWired/GetWiredCustomerDetail.cfm?cmf=&quot; &amp;  Ship_CMF__c , &quot;Network Solutions&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Network Solution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Dealer_Name__c</fullName>
        <label>New Dealer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_CMF_Create_Date__c</fullName>
        <description>Only for back-end</description>
        <label>Oracle CMF Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pod__c</fullName>
        <label>Pod #</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_CMF__c</fullName>
        <description>Prev CMF #</description>
        <label>Prev CMF #</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Main_CMF__c</fullName>
        <label>Prev Main CMF #</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Name__c</fullName>
        <label>Prev Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R815__c</fullName>
        <label>R815?</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rev__c</fullName>
        <label>Rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Dealer_CMF_CreateDate__c</fullName>
        <label>SLX Dealer CMF CreateDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLX_Dealer_CMF_ID__c</fullName>
        <label>SLX Dealer CMF ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Code_del__c</fullName>
        <label>Segment Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Name__c</fullName>
        <label>Segment Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Edge_Client_Install_Date__c</fullName>
        <label>Service Edge Client Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Edge_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Edge Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_CMF_Business_Unit_Code__c</fullName>
        <label>Ship CMF - Business Unit Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_CMF_Business_Unit__c</fullName>
        <label>Ship CMF Business Unit</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_CMF_Region_Code_Name__c</fullName>
        <label>Ship CMF Region Code Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_CMF_Region_Code__c</fullName>
        <label>Ship CMF - Region Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_CMF__c</fullName>
        <externalId>true</externalId>
        <label>Ship CMF</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vision_Cases__c</fullName>
        <formula>hyperlink(&quot;http://dsorbit1he.ds.ad.adp.com/ReportserverSQL2005?%2fVision%2fCase+Results+and+History+by+CMF&amp;varCMF=&quot; &amp; Ship_CMF__c &amp; &quot;&amp;rs:Command=Render&quot;, &quot;Vision Cases&quot;)</formula>
        <inlineHelpText>Link to report viewing Vision Cases for CMF in last 30 days</inlineHelpText>
        <label>Vision Cases</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ePayments_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ePayments Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eSignature_Client_Install_Date__c</fullName>
        <label>eSignature Client Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>eSignature_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eSignature Client</label>
        <type>Checkbox</type>
    </fields>
    <label>CMF Info</label>
    <listViews>
        <fullName>AllCMFs</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Ship_CMF__c</columns>
        <columns>Ship_CMF_Business_Unit__c</columns>
        <columns>Status__c</columns>
        <columns>Main_CMF__c</columns>
        <columns>Data_Warehouse__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>76179208</value>
        </filters>
        <label>All - CMFs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CMFs1</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Ship_CMF__c</columns>
        <columns>Ship_CMF_Business_Unit__c</columns>
        <columns>Status__c</columns>
        <columns>Main_CMF__c</columns>
        <columns>Data_Warehouse__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All - CMFs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CMF Info</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMF Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CMF_Info_ReadOnly</fullName>
        <active>true</active>
        <description>This field is read only for Laser reps.</description>
        <errorConditionFormula>AND(
CONTAINS(UPPER($Profile.Name), &quot;LASER&quot;) , ISCHANGED(Name)
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>This field cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Change_CDK_Branding_to_Installed</fullName>
        <active>true</active>
        <description>RQ-04885 - validation rule to &quot;CDK Branding Status&quot; that only allows to change to &quot;Installed&quot; if current status is &quot;Burned&quot;.</description>
        <errorConditionFormula>IF( 
AND(NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)),
ISCHANGED (CDK_Rebranding_Status__c),
NOT(ISPICKVAL(PRIORVALUE(CDK_Rebranding_Status__c), &quot;Burned&quot;)), 
ISPICKVAL(CDK_Rebranding_Status__c, &quot;Installed&quot;)), TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>CDK_Rebranding_Status__c</errorDisplayField>
        <errorMessage>&quot;CDK Branding Status&quot; that only allows to change to &quot;Installed&quot; if current status is &quot;Burned&quot;.</errorMessage>
    </validationRules>
</CustomObject>